--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,11 @@ export(plot_empirical_MCR_searchpath)
 export(precompute_mcr_objects_and_functions)
 import(MASS)
 import(dfoptim)
-import(kernlab)
+import(graphics)
+import(methods)
 import(optimr)
+import(pbapply)
 import(qp1qc)
+import(stats)
+import(utils)
+importFrom(kernlab,kernelMatrix)
