--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: mcr
-Title: Computes model class reliance, i.e., the most and least that models from a class may rely on variables of interest.
+Title: Computes model class reliance, i.e., the most and least that models from a class may rely on variables of interest
 Version: 0.0.0.9000
-Authors@R: person("Aaron", "Fisher", email = "aafisher@hsph.harvard.edu", role = c("aut", "cre"))
-Description: Computes model class reliance, i.e., the most and least that models from a class may rely on variables of interest.
-Depends: R (>= 3.4.3), dfoptim, methods, kernlab, qp1qc, optimr, quadprog
+Authors@R: person("Aaron", "Fisher", email = "afishe27@alumni.jh.edu", role = c("aut", "cre"))
+Description: Computes model class reliance, i.e., the most and least that models from a class may rely on variables of interest. Throughout this package, we refer to e_orig as e0, and to e_switch as e1 (see details in https://arxiv.org/abs/1801.01489).
+Depends: R (>= 3.4)
+Imports: dfoptim, kernlab, qp1qc, MASS, optimr, quadprog,  pbapply,methods, graphics, stats, utils
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
